--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
-    "name": "V2Ray",
-    "description": "Deploy V2ray on Heroku.",
+    "name": "python-loop",
+    "description": "python-loop",
     "keywords": [
         "V2Ray"
     ],
     "env": {
         "UUID": {
             "description": "V2Ray UUID",
-            "value": "ce7ea10b-5b27-49ab-a93d-6b184df9cce9"
+            "value": "72090945-39af-46d6-aef8-51e6c508a0b0"
         },
         "TUNNEL_TOKEN": {
             "description": "Cloudflare Tunnel Token",
